k8s/talos/infra/reloader/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reloader
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    argocd.argoproj.io/sync-wave: "2"
